# lscai-layer-norm

./: .gitignore  Dockerfile  README.md  init.sh  ngc_pt_jan.toml  pyproject.toml  requirements.txt  run.sh  train.py  train.sh
